############################################################################
## So@Gui@/src/Makefile.am

include Inventor/Qt/common/Makefile.common

SUBDIRS = . Inventor

BUILT_SOURCES = \
	$(SoGuiAllBuiltFiles)

CLEANFILES = \
	$(SoGui_src_BuiltMetaFiles)

DISTCLEANFILES = \
	$(SoGui_src_BuiltFiles) \
	$(SoGui_src_BuiltMetaFiles)

