############################################################################
##

include ../../src/Inventor/Qt/common/Makefile.common

############################################################################

BUILT_SOURCES = \
	$(SoGuiAllBuiltSources)

DISTCLEANFILES = \
	$(SoGui_man_man1_BuiltFiles)

man_MANS = \
	so@gui@-config.1

