############################################################################
## So@Gui@/src/Inventor/Makefile.am

include Qt/common/Makefile.common

SUBDIRS = Qt

BUILT_SOURCES = \
	$(So@Gui@AllBuiltFiles)

CLEANFILES = \
	$(So@Gui@_src_Inventor_BuiltFiles) \
	$(So@Gui@_src_Inventor_BuiltMetaFiles)

